# CFGgrind

./: .gitignore  Makefile.am  README.md  bb.c  bbcc.c  bitset.c  callstack.c  cfg.c  cfggrind.patch  cfggrind_asmmap  cfggrind_info  clo.c  context.c  debug.c  fdesc.c  fn.c  global.h  instrs.c  main.c  smarthash.c  smartlist.c  threads.c
data/rq1-efficiency/SPEC2017/: data.csv  plot.R  plot2.R  speedup.R
data/rq1-efficiency/cBench/: data.csv  plot.R  plot2.R  speedup.R
data/rq2-caching/: data.csv  plot.R
data/rq3-completeness/ratio/: analysis.R  data-cbench.csv  data-spec.csv  plot.R
data/rq3-completeness/relation/: data-cbench.csv  data-spec.csv  filter.sh  plot.R
data/rq4-incremental/: data-cfgs.csv  data-instrs.csv  plot.R
data/rq5-static-vs-dynamic/: analysis.R  cbench-stripped.csv  cbench-symbols.csv  spec-stripped.csv  spec-symbols.csv
data/rq6-complexity/: data-cbench.csv  data-spec.csv  plot.R
prototype/: cfg.py  config.py  group.py  instr.py  machine.py  main.py  state.py
prototype/test/: simple.c  simple.desc  test.c  test.desc  total.c  total.desc
tests/: Makefile.am  signal.c  test.c
